--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -37,16 +37,13 @@ jobs:
         env:
           CF_KV_ID: ${{ secrets.CF_KV_ID }}
         run: |
-          echo "::group::wrangler.toml before injection"
-          cat wrangler.toml || true
-          echo "::endgroup::"
           if [ -n "$CF_KV_ID" ]; then
-            # Support both [[kv_namespaces]] and [[env.production.kv_namespaces]]
-            perl -0777 -pe 's/\[\[(env\.production\.)?kv_namespaces\]\]\s*binding\s*=\s*"SUBSCRIPTIONS_KV"\s*id\s*=\s*"[^\"]*"/[[env.production.kv_namespaces]]\nbinding = "SUBSCRIPTIONS_KV"\nid = "'$CF_KV_ID'"/sm' -i wrangler.toml
+            # Replace the ID for SUBSCRIPTIONS_KV regardless of where it is
+            sed -i "s/id = \"[a-f0-9]\{32\}\"/id = \"$CF_KV_ID\"/g" wrangler.toml
             echo "Injected KV ID from secrets into wrangler.toml"
           fi
-          echo "::group::wrangler.toml after injection"
-          cat wrangler.toml || true
+          echo "::group::wrangler.toml"
+          cat wrangler.toml
           echo "::endgroup::"
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -57,33 +54,8 @@ jobs:
         run: npm ci
       - name: Install Wrangler CLI
         run: npm i -g wrangler@latest
-      - name: Check KV binding matches namespace list
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: |
-          # Find ID associated with SUBSCRIPTIONS_KV
-          ID=$(grep -A 2 'binding = "SUBSCRIPTIONS_KV"' wrangler.toml | grep -oP 'id = "\K[^"]+')
-          if [ -z "$ID" ]; then
-            # Try alternative format
-            ID=$(grep -Po 'id\s*=\s*"\K[^"]+' wrangler.toml | head -n 1)
-          fi
-          echo "KV ID in wrangler.toml: $ID"
-          if [ -z "$ID" ]; then echo "Could not find KV ID in wrangler.toml"; exit 1; fi
-          
-          wrangler kv namespace list > kv.json
-          if ! grep -q "$ID" kv.json; then
-            echo "KV ID $ID not found in your account namespaces."
-            echo "Please ensure:"
-            echo "1. You have created a KV namespace named 'SUBSCRIPTIONS_KV' (or any name) in Cloudflare Dashboard."
-            echo "2. You have copied its ID and either updated wrangler.toml or set the CF_KV_ID secret."
-            echo "Current Account Namespaces:"
-            cat kv.json
-            exit 1
-          fi
       - name: Deploy to Cloudflare Workers
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          WRANGLER_LOG: debug
-        run: wrangler deploy --env production
+        run: wrangler deploy
